--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -5,9 +5,26 @@ html(lang="fr")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title ToiToiMonToit
         block stylesheet
+        link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous")
+        link(href="/css/main.css" rel="stylesheet")
     body 
-        h1 Bienvenue sur la meilleure agence imobiliere 
+        nav.navbar.navbar-expand-lg.bg-body-tertiary
+            .container
+                a.navbar-brand(href="#" ) 
+                    img(src="/img/logo.png")
+                button.navbar-toggler(type="button", data-bs-toggle="collapse", data-bs-target="#navbarNavDropdown", aria-controls="navbarNavDropdown", aria-expanded="false", aria-label="Toggle navigation")
+                    span.navbar-toggler-icon
+                #navbarNavDropdown.collapse.navbar-collapse
+                    ul.navbar-nav
+                        li.nav-item
+                            a.nav-link(href="#") Inscription
+                        li.nav-item
+                            a.nav-link(href="#") Connexion
         block content 
 
+
         footer 
-            div Un super footer
+            .container
+                div Un super footer
+        script(src=process.env.BROWSER_REFRESH_URL)
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous")
