--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -5,19 +5,20 @@ html(lang="fr")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title ToiToiMonToit
         block stylesheet
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer")
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous")
         link(href="/css/main.css" rel="stylesheet")
     body 
         nav.navbar.navbar-expand-lg.bg-body-tertiary
             .container
-                a.navbar-brand(href="#" ) 
+                a.navbar-brand(href="/") 
                     img(src="/img/logo.png")
                 button.navbar-toggler(type="button", data-bs-toggle="collapse", data-bs-target="#navbarNavDropdown", aria-controls="navbarNavDropdown", aria-expanded="false", aria-label="Toggle navigation")
                     span.navbar-toggler-icon
                 #navbarNavDropdown.collapse.navbar-collapse
                     ul.navbar-nav
                         li.nav-item
-                            a.nav-link(href="#") Inscription
+                            a.nav-link(href="/inscription") Inscription
                         li.nav-item
                             a.nav-link(href="#") Connexion
         block content 
