Début prise en compte formulaire inscription

--- a/templates/register/index.pug
+++ b/templates/register/index.pug
@@ -3,7 +3,7 @@ extends ../layout.pug
 block content
     .container
         h1 Inscription 
-        form(action='/inscription' method="post")
+        form(action="/inscription" method="post")
             .input-group.mb-3
                 .input-group-prepend
                     .input-group-text.d-none.d-lg-block 
