Ajout du message d'erreur sur le formulaire si email existe en BDD

--- a/templates/register/index.pug
+++ b/templates/register/index.pug
@@ -3,6 +3,8 @@ extends ../layout.pug
 block content
     .container
         h1 Inscription 
+        if error 
+            .alert.alert-danger #{error}
         form(action="/inscription" method="post")
             .input-group.mb-3
                 .input-group-prepend
