--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -21,6 +21,15 @@ html(lang="fr")
                             a.nav-link(href="/inscription") Inscription
                         li.nav-item
                             a.nav-link(href="#") Connexion
+        
+        .container
+            - var messages = getMessages()
+            if messages.notify
+                each msg in messages.notify
+                    .alert.alert-info= msg
+            if messages.error
+                each msg in messages.error
+                    .alert.alert-danger= msg
         block content 
 
 
