Ajout authentification + modification inscription

--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -20,7 +20,7 @@ html(lang="fr")
                         li.nav-item
                             a.nav-link(href="/inscription") Inscription
                         li.nav-item
-                            a.nav-link(href="#") Connexion
+                            a.nav-link(href="/connexion") Connexion
         
         .container
             - var messages = getMessages()
