--- a/templates/register/index.pug
+++ b/templates/register/index.pug
@@ -10,7 +10,7 @@ block content
                 .input-group-prepend
                     .input-group-text.d-none.d-lg-block 
                         i.fa.fa-envelope 
-                input(type="email" class="form-control" placeholder="Email" name="email")     
+                input(type="email" class="form-control" placeholder="Email" name="email" value=email)     
     
             .input-group.mb-3
                 .input-group-prepend
@@ -25,26 +25,26 @@ block content
                     .input-group-text.d-none.d-lg-block 
                         i.fa.fa-restroom
                 select(class="form-control" placeholder="Civilité" name="civility")
-                    option(value="1") Monsieur
-                    option(value="2") Madame
+                    option(value="1" selected=civility==1) Monsieur
+                    option(value="2" selected=civility==2) Madame
     
             .input-group.mb-3
                 .input-group-prepend
                     .input-group-text.d-none.d-lg-block
                         i.fa.fa-user
-                input(type="text" class="form-control" placeholder="Nom" name="lastname")
+                input(type="text" class="form-control" placeholder="Nom" name="lastname" value=lastname)
     
             .input-group.mb-3
                 .input-group-prepend
                     .input-group-text.d-none.d-lg-block 
                         i.fa.fa-user
-                input(type="text" class="form-control" placeholder="Prénom" name="firstname")
+                input(type="text" class="form-control" placeholder="Prénom" name="firstname" value=firstname)
     
             .input-group.mb-3
                 .input-group-prepend
                     .input-group-text.d-none.d-lg-block
                         i.fa.fa-phone
-                input(type="phone" class="form-control" placeholder="Téléphone" name="phone") 
+                input(type="phone" class="form-control" placeholder="Téléphone" name="phone" value=phone) 
     
             .row.justify-content-center
                 .col-2
