Ajout des sessions

--- a/templates/home/index.pug
+++ b/templates/home/index.pug
@@ -2,4 +2,7 @@ extends ../layout.pug
 
 block content
     .container
-        p Hello World !!!
+        if session.user 
+            p Bonjour #{session.user.lastname} #{session.user.firstname}
+        else 
+            p Vous n'êtes pas connecté
