--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -19,7 +19,7 @@ html(lang="fr")
                     ul.navbar-nav
                         if session.user 
                             li.nav-item
-                                a.nav-link(href="/") Déconnexion
+                                a.nav-link(href="/deconnexion") Déconnexion
                         else
                             li.nav-item
                                 a.nav-link(href="/inscription") Inscription
