--- a/templates/admin/layout.pug
+++ b/templates/admin/layout.pug
@@ -2,7 +2,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    title #{websiteName} - Dashboard
+    title ToiToiMonToit - Dashboard
     
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous")
@@ -10,7 +10,7 @@ html
  
   body
     header(class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow")
-      <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="/admin">#{websiteName}</a>
+      <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="/admin">ToiToiMonToit</a>
  
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
