Ajout du listing des utilisateurs coté admin + ajout unicité email en SQL

--- a/templates/admin/layout.pug
+++ b/templates/admin/layout.pug
@@ -45,7 +45,7 @@ html
                 em.fa.fa-address-book &nbsp;
                 | Contacts
             li.nav-item
-              a.nav-link(class=(route.indexOf('/admin/user/') != -1 ? 'active' : '' ), href='#')
+              a.nav-link(class=(route.indexOf('/admin/user/') != -1 ? 'active' : '' ), href='/admin/user/')
                 em.fa.fa-user &nbsp;
                 | Collaborateurs
             li.nav-item
