Exemple récupération avec params

--- a/templates/admin/user/index.pug
+++ b/templates/admin/user/index.pug
@@ -29,7 +29,7 @@ block content
                             a.btn.btn-primary(href="#")
                                 i.fa.fa-edit
                             span &nbsp;&nbsp;
-                            a.btn.btn-danger(href="#")
+                            a.btn.btn-danger(href="/admin/user/delete/"+user.id)
                                 i.fa.fa-trash
     else 
         .alert.alert-info Aucun utilisateur
