Ajout de l'enregistrement de bien

--- a/templates/admin/layout.pug
+++ b/templates/admin/layout.pug
@@ -37,7 +37,7 @@ html
                   em.fa.fa-tachometer-alt &nbsp;
                   | Dashboard
             li.nav-item
-              a.nav-link(class=(route.indexOf('/admin/realty/') != -1  ? 'active' : '' ), href='#')
+              a.nav-link(class=(route.indexOf('/admin/realty/') != -1  ? 'active' : '' ), href='/admin/realty/')
                 em.fa.fa-home &nbsp;
                 | Biens
             li.nav-item
